kubernetes/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: web-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
          - path: /mongo
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 3000  
          - path: /indexer
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 3000  
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 3000  
          - path: /ipfs
            pathType: Prefix
            backend:
              service:
                name: ipfs-svc
                port:
                  number: 8080
